Squashed commit of the following:
commit b55595256993ec47974ff32be9cfa618d475bd1a
Merge: 7392c8c 0af68ef
Author: elibragimova <elibragimova@i-novus.ru>
Date:   Tue Oct 8 21:04:23 2019 +0300

    Merge remote-tracking branch 'origin/develop' into develop

commit 7392c8c052298ac7cc2c79fc54e436226a515403
Author: elibragimova <elibragimova@i-novus.ru>
Date:   Tue Oct 8 21:04:15 2019 +0300

    [BF] AUDIT-103 исправление работы валидации
    https://jira.i-novus.ru/browse/AUDIT-103

commit 0af68efb8be8eca91a0fc3048f22267d4da2e794
Merge: 7e55ab6 82f1930
Author: Кузнецов Александр <akuznetcov@i-novus.ru>
Date:   Tue Oct 8 21:02:11 2019 +0300

    Merge branch 'sub/AUDIT-67' into 'develop'

    Sub/audit 67 Загрузка журнала событий сервера keycloak в журнал аудита

    See merge request microservices/audit!92

commit 82f193034cb6c8223c2760026f2cd3b973325ecf
Author: Ибрагимова Эльвира <elibragimova@i-novus.ru>
Date:   Tue Oct 8 21:02:11 2019 +0300

    Sub/audit 67 Загрузка журнала событий сервера keycloak в журнал аудита

commit 7e55ab6a3966a3326170058cc2f77d304ad2224f
Merge: b9a9960 317e1c4
Author: Кузнецов Александр <akuznetcov@i-novus.ru>
Date:   Tue Oct 8 18:37:00 2019 +0300

    Merge branch 'sub/AUDIT-105' into 'develop'

    [CF] AUDIT-105 Доработать audit-client-spring-boot-starter

    See merge request microservices/audit!95

commit 317e1c479744e4515be4a0c0597b1ba4526afe41
Author: Гайфутдинов Айдар <agaifutdinov@i-novus.ru>
Date:   Tue Oct 8 18:37:00 2019 +0300

    [CF] AUDIT-105 Доработать audit-client-spring-boot-starter

commit b9a9960ef89a63dcc8b8a088c424535767584132
Merge: 67aecf0 0838f4e
Author: Кузнецов Александр <akuznetcov@i-novus.ru>
Date:   Tue Oct 8 17:11:58 2019 +0300

    Merge branch 'fix/AUDIT-84' into 'develop'

    Fix/audit 84

    See merge request microservices/audit!97

commit 0838f4e6376370817852fc78c2a10f6360ba71c4
Author: Гайфутдинов Айдар <agaifutdinov@i-novus.ru>
Date:   Tue Oct 8 17:11:58 2019 +0300

    Fix/audit 84

commit 67aecf070d